--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,7 @@
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
 
-  <form method="POST" activity="/login"
+  <form activity="/login" method="POST"
   
   </body>
 </html>
