Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,10 @@
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
 
-  <form activity="/login" method="POST"
+  <form activity="/login" method="POST">
+    <input type="text" 
+    
+  </form>
   
   </body>
 </html>
