Automatically backed up by Learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,7 +10,7 @@
     <h3>Log In Please</h3>
 
   <form activity="/login" method="POST">
-    <input type="text" 
+    <input type="text" name="
     
   </form>
   
