--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,7 +12,7 @@
   <form activity="/login" method="POST">
     <input type="text" name="username">
     <input type="text" name="password">
-    <input type="submit"
+    <input type="submit">
     
   </form>
   
