--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,7 @@
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
     <form method="post" action="/login">
-      <input type="text" name="username" placeholder="Username">
+      <input type="text" name="username">
       <input type="password" name="password">
       <input type="submit">
     </form>
